tests/negative/gold/bad_global_name2_test.gold
tests/negative/bad_global_name2_test.toit:3:9: error: Unexpected token: :=
foo.bar := 499
        ^~
tests/negative/bad_global_name2_test.toit:3:1: error: Invalid name
foo.bar := 499
^~~~~~~
Compilation failed.
